ec2-instace-v2.yml
AWSTemplateFormatVersion: 2010-09-09

Description: "EC2 Instance using cloudformation"

Parameters:
  amiId:
    Description: "EC2 AMI ID"
    Type: String
    Default: "ami-0e1d35993cb249cee"
  InstanceType:
    Description: "EC2 Instance Type"
    Type: String
    Default: "t3.micro"
    AllowedValues:
      - "t3.micro"
      - "t3.small"
  SecurityGroupIds:
    Description: "Security Group ID"
    Type: String
    Default: "sg-0b4b485dd1c5f393d"
  KeyPairName:
    Description: "EC2 KeyPair Name"
    Type: String
    Default: "aws-trn-2025-oregon"

Resources:
  ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 8
      ImageId: !Ref amiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt ec2SecurityGroup.GroupId

  ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "CFN Linux Server Security Group" # Required
      GroupName: "cfnLinuxSecGroup"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          Description: "Allow all outbound"
          FromPort: -1
          IpProtocol: "-1"
          ToPort: -1
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          Description: "Allow HTTP"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          Description: "Allow SSH"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
      VpcId: "vpc-009644d4046034d05"
#checklist:
#instance typep
#secgroup
#keypair
